--- a/src/Client/Views/MenuForLogInView/MenuForLogInView.fxml
+++ b/src/Client/Views/MenuForLogInView/MenuForLogInView.fxml
@@ -2,18 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.MenuForLogInView.MenuForLogInViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.MenuForLogInView.MenuForLogInViewController">
    <children>
-      <Label alignment="CENTER" layoutX="133.0" layoutY="33.0" prefHeight="48.0" prefWidth="356.0" text="Rent4U - Log in" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
-         <font>
-            <Font name="System Bold" size="39.0" />
-         </font>
-      </Label>
-      <Button fx:id="openLogInForCustomer" layoutX="193.0" layoutY="220.0" mnemonicParsing="false" onAction="#onLogInForCustomerButton" prefHeight="40.0" prefWidth="217.0" text="Log-in as a Customer" AnchorPane.leftAnchor="193.0" AnchorPane.topAnchor="220.0" />
-      <Label alignment="CENTER" layoutX="270.0" layoutY="81.0" prefHeight="40.0" prefWidth="600.0" text="Please select the correct log-in option" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
-      <Button fx:id="openLoginForEmployee" layoutX="192.0" layoutY="160.0" mnemonicParsing="false" onAction="#onLogInForEmployeeButton" prefHeight="40.0" prefWidth="217.0" text="Log-in as an Employee" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="160.0" />
+      <Button fx:id="openLogInForCustomer" layoutX="193.0" layoutY="220.0" mnemonicParsing="false" onAction="#onLogInForCustomerButton" prefHeight="40.0" prefWidth="217.0" style="-fx-background-color: F4AF82;" text="Log-in as a Customer" AnchorPane.leftAnchor="193.0" AnchorPane.topAnchor="220.0" />
+      <Label alignment="CENTER" layoutY="117.0" prefHeight="21.0" prefWidth="600.0" text="Please select the correct log-in option" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0" />
+      <Button fx:id="openLoginForEmployee" layoutX="192.0" layoutY="160.0" mnemonicParsing="false" onAction="#onLogInForEmployeeButton" prefHeight="40.0" prefWidth="217.0" style="-fx-background-color: F4AF82;" text="Log-in as an Employee" AnchorPane.leftAnchor="192.0" AnchorPane.topAnchor="160.0" />
+      <ImageView fx:id="logo" fitHeight="111.0" fitWidth="200.0" layoutX="219.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="217.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@/GUI/Logo.png" />
+         </image></ImageView>
    </children>
 </AnchorPane>
