--- a/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
+++ b/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
@@ -24,7 +24,7 @@
       <Label layoutX="27.0" layoutY="183.0" text="Enter an E-Mail:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="180.0" />
       <TextField fx:id="eMailField" layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="23.0" layoutY="320.0" text="Phone number:" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="320.0" />
-      <TextField fx:id="phoneField" layoutX="21.0" layoutY="344.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="344.0" />
+      <TextField fx:id="phoneField" layoutX="30.0" layoutY="344.0" prefHeight="27.0" prefWidth="188.0" promptText=" 45 00 00 00 00" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="344.0" />
       <Label layoutX="355.0" layoutY="58.0" text="Position:" AnchorPane.leftAnchor="355.0" AnchorPane.topAnchor="58.0" />
       <TextField fx:id="position" layoutX="352.0" layoutY="84.0" prefHeight="27.0" prefWidth="140.0" promptText="employee/manager" AnchorPane.leftAnchor="352.0" AnchorPane.topAnchor="84.0" />
       <Label layoutX="24.0" layoutY="247.0" text="Enter CPR number:" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="247.0" />
@@ -34,5 +34,6 @@
       <Label layoutX="356.0" layoutY="128.0" text="Monthly salary:" />
       <TextField fx:id="salary" layoutX="356.0" layoutY="155.0" prefHeight="27.0" prefWidth="140.0" promptText="15000" />
       <Label fx:id="addedLabel" layoutX="364.0" layoutY="317.0" text="The employee was sucessfully added" />
+      <Label layoutX="19.0" layoutY="349.0" text="+" />
    </children>
 </AnchorPane>
