--- a/src/Client/Views/AddPersonalAccountView/AddPersonalAccountView.fxml
+++ b/src/Client/Views/AddPersonalAccountView/AddPersonalAccountView.fxml
@@ -30,13 +30,14 @@
             <TextField fx:id="rePasswordField" layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
             <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0" />
             <Label fx:id="passwordCheckLabel" layoutX="320.0" layoutY="150.0" text="Passwords are not the same" AnchorPane.leftAnchor="320.0" />
-            <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
+            <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" 45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
             <Label layoutX="27.0" layoutY="239.0" text="Driving license number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="240.0" />
             <TextField fx:id="drivingLicenseField" layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
             <Label layoutX="27.0" layoutY="295.0" text="Enter CPR number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="300.0" />
             <TextField fx:id="cprFirstField" alignment="CENTER_RIGHT" layoutX="25.0" layoutY="312.0" prefHeight="27.0" prefWidth="128.0" promptText="000000" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="325.0" />
             <TextField fx:id="cprSecondField" layoutX="168.0" layoutY="312.0" prefHeight="27.0" prefWidth="97.0" promptText="0000" AnchorPane.leftAnchor="171.0" AnchorPane.topAnchor="325.0" />
             <Label alignment="CENTER" layoutX="153.0" layoutY="317.0" prefHeight="17.0" prefWidth="16.0" text="/" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="330.0" />
+            <Label layoutX="311.0" layoutY="210.0" text="+" />
          </children>
       </AnchorPane>
    </children>
