--- a/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
+++ b/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
@@ -20,7 +20,7 @@
       <TextField fx:id="firstNameField" layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="lastNameField" layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
       <Label layoutX="25.0" layoutY="120.0" text="Date of birth:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
-      <DatePicker fx:id="dateOfBirthPicker" layoutX="27.0" layoutY="143.0" prefWidth="180.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
+      <DatePicker fx:id="dateOfBirthPicker" editable="false" layoutX="27.0" layoutY="143.0" prefWidth="180.0" showWeekNumbers="true" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
       <Label layoutX="27.0" layoutY="183.0" text="Enter an E-Mail:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="180.0" />
       <TextField fx:id="eMailField" layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="23.0" layoutY="320.0" text="Phone number:" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="320.0" />
