--- a/src/Client/Views/MenuView/MenuView.fxml
+++ b/src/Client/Views/MenuView/MenuView.fxml
@@ -13,7 +13,7 @@
          </font>
       </Label>
       <Button layoutX="14.0" layoutY="118.0" mnemonicParsing="false" onAction="#onAddVehicleButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW VEHICLE" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="120.0" />
-      <Label alignment="CENTER" layoutX="270.0" layoutY="81.0" text="Welcome..." AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
+      <Label fx:id="welcomeLabel" alignment="CENTER" layoutX="270.0" layoutY="81.0" text="Welcome Employee!" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0" />
       <Button layoutX="238.0" layoutY="359.0" mnemonicParsing="false" onAction="#onLogOutButton" prefHeight="27.0" prefWidth="127.0" text="LOG OUT" AnchorPane.leftAnchor="238.0" AnchorPane.topAnchor="360.0" />
       <Button layoutX="14.0" layoutY="169.0" mnemonicParsing="false" onAction="#onListOfVehicleButton" prefHeight="40.0" prefWidth="217.0" text="LIST OF ALL VEHICLES" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="170.0" />
       <Button layoutX="15.0" layoutY="223.0" mnemonicParsing="false" onAction="#onAddBookingButton" prefHeight="40.0" prefWidth="217.0" text="ADD NEW BOOKING" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0" />
