--- a/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
+++ b/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
@@ -3,85 +3,92 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="225.0" prefHeight="73.0" prefWidth="99.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="225.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="Start Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
+            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+               <font>
+                  <Font size="12.0" />
+               </font></Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane prefHeight="73.0" prefWidth="65.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Booking ID" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="3.0" layoutY="36.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="3.0" layoutY="36.0" prefHeight="17.0" prefWidth="71.0" text="2933" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="65.0" prefHeight="73.0" prefWidth="80.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="65.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-2.0" layoutY="33.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-2.0" layoutY="33.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="133.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="142.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="145.0" prefHeight="73.0" prefWidth="80.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="145.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="License Plate" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+               <font>
+                  <Font size="12.0" />
+               </font></Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="324.0" prefHeight="73.0" prefWidth="99.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="324.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="End Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
+            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
+               <font>
+                  <Font size="12.0" />
+               </font></Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="423.0" prefHeight="73.0" prefWidth="80.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="423.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-4.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-4.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="470.0" layoutY="-2.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="510.0" prefHeight="73.0" prefWidth="72.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button onAction="#onClickedEdit" alignment="CENTER" layoutX="8.0" layoutY="23.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="36.0" text="EDIT" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
+            <Button alignment="CENTER" layoutY="18.0" mnemonicParsing="false" onAction="#onClickedEdit" prefHeight="24.0" prefWidth="36.0" text="EDIT" AnchorPane.rightAnchor="30.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
-            <Button onAction="#onClickedDeleteButton" layoutX="42.0" layoutY="24.0" mnemonicParsing="false" text="X" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="25.0">
+            <Button layoutX="48.0" layoutY="17.0" mnemonicParsing="false" onAction="#onClickedDeleteButton" prefHeight="24.0" prefWidth="21.0" text="X" AnchorPane.rightAnchor="3.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <Line endX="545.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
