Created: - GUI Update - small functionallity update

--- a/src/Client/Views/ListOfCustomersView/CustomerCellView/CustomerViewCell.fxml
+++ b/src/Client/Views/ListOfCustomersView/CustomerCellView/CustomerViewCell.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="590.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="-10.0" prefHeight="40.0" prefWidth="69.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -103,12 +103,12 @@
             </Label>
          </children>
       </AnchorPane>
-      <Button layoutX="507.0" layoutY="10.0" mnemonicParsing="false" onAction="#onClickedEditButton" text="EDIT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="48.5" AnchorPane.topAnchor="10.0">
+      <Button layoutX="507.0" layoutY="10.0" mnemonicParsing="false" onAction="#onClickedEditButton" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <Button layoutX="555.0" layoutY="10.0" mnemonicParsing="false" onAction="#onClickedDeleteButton" text="X" AnchorPane.bottomAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <Button layoutX="555.0" layoutY="10.0" mnemonicParsing="false" onAction="#onClickedDeleteButton" style="-fx-background-color: E28243;" text="X" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font size="10.0" />
          </font>
