--- a/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
+++ b/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
@@ -3,19 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="Start Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
+            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-3.0" layoutY="28.0" prefHeight="33.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
+               <font>
+                  <Font size="10.0" />
+               </font></Label>
          </children>
       </AnchorPane>
       <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -25,17 +27,17 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="3.0" layoutY="36.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-2.0" layoutY="33.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="133.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="142.0" AnchorPane.topAnchor="0.0">
@@ -45,43 +47,45 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="55.0" prefWidth="93.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="End Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
+            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="17.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
+               <font>
+                  <Font size="11.0" />
+               </font></Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="55.0" prefWidth="71.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-4.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="470.0" layoutY="-2.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button onAction="#onClickedEdit" alignment="CENTER" layoutX="8.0" layoutY="23.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="36.0" text="EDIT" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="25.0">
+            <Button alignment="CENTER" layoutX="11.0" layoutY="25.0" mnemonicParsing="false" onAction="#onClickedEdit" prefHeight="24.0" prefWidth="36.0" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="18.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
-            <Button onAction="#onClickedDeleteButton" layoutX="42.0" layoutY="24.0" mnemonicParsing="false" text="X" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="25.0">
+            <Button layoutX="42.0" layoutY="24.0" mnemonicParsing="false" onAction="#onClickedDeleteButton" style="-fx-background-color: E28243;" text="X" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="18.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <Line endX="545.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
 </AnchorPane>
