--- a/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
+++ b/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInForCustomerView.LogInForCustomerViewController">
     <children>
-        <Button fx:id="logInButton" layoutX="220.0" layoutY="211.0" mnemonicParsing="false" onAction="#logIn" prefHeight="27.0" prefWidth="161.0" text="LogIn" />
+        <Button fx:id="logInButton" layoutX="220.0" layoutY="211.0" mnemonicParsing="false" onAction="#logIn" prefHeight="27.0" prefWidth="161.0" text="Log in" />
         <TextField fx:id="passwordField" alignment="CENTER" layoutX="220.0" layoutY="173.0" promptText="Password" />
         <Label layoutX="237.0" layoutY="55.0" text="Rent4U">
             <font>
