--- a/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
+++ b/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
@@ -31,7 +31,7 @@
         <TextField fx:id="endHour" alignment="CENTER" layoutX="80.0" layoutY="246.0" prefHeight="27.0" prefWidth="40.0" promptText="HH" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="246.0" />
         <TextField fx:id="endMinute" alignment="CENTER" layoutX="125.0" layoutY="246.0" prefHeight="27.0" prefWidth="40.0" promptText="MM" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="246.0" />
         <DatePicker fx:id="startDatePicker" editable="false" layoutX="79.0" layoutY="110.0" showWeekNumbers="true" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="110.0" />
-        <DatePicker fx:id="endDatePicker" layoutX="80.0" layoutY="215.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="215.0" />
+        <DatePicker fx:id="endDatePicker" editable="false" layoutX="80.0" layoutY="215.0" showWeekNumbers="true" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="215.0" />
         <ListView fx:id="listView" fixedCellSize="2.0" layoutX="297.0" layoutY="82.0" prefHeight="250.0" prefWidth="300.0" AnchorPane.bottomAnchor="65.0" AnchorPane.rightAnchor="20.0" />
         <Label layoutX="27.0" layoutY="326.0" text="Total price for this booking:" AnchorPane.bottomAnchor="56.39999999999998" AnchorPane.leftAnchor="27.0" />
         <Label fx:id="totalPriceOfBooking" alignment="CENTER_RIGHT" layoutX="173.0" layoutY="326.0" prefHeight="17.0" prefWidth="61.0" text="00.0" AnchorPane.bottomAnchor="56.39999999999998" AnchorPane.leftAnchor="173.0" />
