--- a/src/Client/Views/ListOfEmployeesView/EmployeeCellView/EmployeeCellView.fxml
+++ b/src/Client/Views/ListOfEmployeesView/EmployeeCellView/EmployeeCellView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="-10.0" prefHeight="40.0" prefWidth="59.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -17,7 +17,7 @@
             <Label fx:id="firstNameLabel" alignment="CENTER" layoutX="1.0" layoutY="18.0" prefHeight="13.0" prefWidth="65.0" text="Name" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="59.0" prefHeight="40.0" prefWidth="59.0" style="-fx-background-color: E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="59.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="59.0" prefHeight="40.0" prefWidth="59.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="59.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="2.0" layoutY="6.0" prefHeight="13.0" prefWidth="64.0" text="Last Name" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -41,7 +41,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="188.0" prefHeight="40.0" prefWidth="94.0" style="-fx-background-color: E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="188.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="188.0" prefHeight="40.0" prefWidth="94.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="188.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="2.0" layoutY="6.0" prefHeight="13.0" prefWidth="64.0" text="E-Mail" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -69,7 +69,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="341.0" prefHeight="40.0" prefWidth="69.0" style="-fx-background-color: E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="341.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="341.0" prefHeight="40.0" prefWidth="69.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="341.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="2.0" layoutY="6.0" prefHeight="13.0" prefWidth="64.0" text="Position" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -83,7 +83,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="462.0" prefHeight="40.0" prefWidth="62.0" style="-fx-background-color: E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="462.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="462.0" prefHeight="40.0" prefWidth="62.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="462.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="2.0" layoutY="6.0" prefHeight="15.0" prefWidth="59.0" text="CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="5.0">
                <font>
@@ -99,12 +99,12 @@
       </AnchorPane>
       <AnchorPane layoutX="540.0" layoutY="-2.0" prefHeight="42.0" prefWidth="61.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#onClickedDeleteButton" text="X" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="10.0">
+            <Button mnemonicParsing="false" onAction="#onClickedDeleteButton" style="-fx-background-color: E28243;" text="X" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
-            <Button mnemonicParsing="false" onAction="#onClickedEditButton" text="EDIT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="27.5" AnchorPane.topAnchor="10.0">
+            <Button mnemonicParsing="false" onAction="#onClickedEditButton" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="27.5" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
