--- a/src/Client/Views/ListOfEmployeesView/ListOfEmployeesView.fxml
+++ b/src/Client/Views/ListOfEmployeesView/ListOfEmployeesView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfCustomersView.ListOfCustomersViewController">
    <children>
-      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: F4AF82 F4AF82;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: FFD3B7;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="All Employees" textFill="#e28243" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
