--- a/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
+++ b/src/Client/Views/AddBookingCustomerView/AddBookingCustomerView.fxml
@@ -9,17 +9,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingCustomerView.AddBookingCustomerViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingCustomerView.AddBookingCustomerViewController">
     <children>
-        <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMainMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
-        <Label layoutX="25.0" layoutY="31.0" text="Create a booking" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
+        <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMainMenuButton" style="-fx-background-color: FFD3B7;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+        <Label layoutX="25.0" layoutY="31.0" text="Create a booking" textFill="#e28243" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
             <font>
                 <Font name="System Bold" size="17.0" />
             </font>
         </Label>
-        <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" onAction="#onCreateBookingButton" text="Create Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+        <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" onAction="#onCreateBookingButton" style="-fx-background-color: F4AF82;" text="Create Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
         <Label layoutX="299.0" layoutY="52.0" text="Select a vehicle type:" AnchorPane.leftAnchor="299.0" AnchorPane.topAnchor="52.0" />
-        <ComboBox fx:id="type" layoutX="427.0" layoutY="47.0" onAction="#onChoseType" prefHeight="27.0" prefWidth="121.0" promptText="Desire type" AnchorPane.leftAnchor="427.0" AnchorPane.topAnchor="47.0" />
+        <ComboBox fx:id="type" layoutX="427.0" layoutY="47.0" onAction="#onChoseType" prefHeight="27.0" prefWidth="121.0" promptText="Desire type" style="-fx-background-color: FFFFFF; -fx-border-color: F4AF82; -fx-border-radius: 3;" AnchorPane.leftAnchor="427.0" AnchorPane.topAnchor="47.0" />
         <Label layoutX="25.0" layoutY="85.0" text="Select a start time:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
         <Label layoutX="23.0" layoutY="191.0" text="Select an end time:" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="191.0" />
         <Label layoutX="45.0" layoutY="114.0" text="Date:" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="114.0" />
