--- a/src/Client/Views/AddBookingCustomerView/VehicleViewCell/VehicleViewCell.fxml
+++ b/src/Client/Views/AddBookingCustomerView/VehicleViewCell/VehicleViewCell.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<AnchorPane fx:id="anchorPane" maxHeight="120" maxWidth="265" minHeight="120" minWidth="265" prefHeight="120.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<AnchorPane fx:id="anchorPane" maxHeight="120" maxWidth="265" minHeight="120" minWidth="265" prefHeight="120.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="makeLabel" layoutX="12.0" layoutY="10.0" prefHeight="17.0" prefWidth="70.0" text="Audi" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
@@ -26,7 +28,7 @@
       <Label layoutX="122.0" layoutY="35.0" prefHeight="17.0" prefWidth="60.0" text="Lic. plate:" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="35.0" />
       <Label fx:id="enginesPowerLabel" layoutX="11.0" layoutY="74.0" prefHeight="17.0" prefWidth="80.0" text="105 HP" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="10.0" />
       <Line endX="105.0" layoutX="160.0" layoutY="95.0" startX="-160.0" AnchorPane.bottomAnchor="2.0" />
-      <Button onAction="#onChooseButton" layoutX="200.0" layoutY="10.0" mnemonicParsing="false" text="CHOOSE THIS VEHICLE" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="10.0">
+      <Button layoutX="200.0" layoutY="10.0" mnemonicParsing="false" onAction="#onChooseButton" style="-fx-background-color: FFD3B7;" text="CHOOSE THIS VEHICLE" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="10.0">
          <font>
             <Font size="10.0" />
          </font>
