--- a/src/Client/Views/SetStatusView/SetStatusView.fxml
+++ b/src/Client/Views/SetStatusView/SetStatusView.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.SetStatusView.SetStatusViewController">
    <children>
-      <Button fx:id="goToMenuButton" layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: F4AF82;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <Button fx:id="goToMenuButton" layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: FFD3B7;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Change the status" textFill="#e28243" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
