--- a/src/Client/Views/ListOfVehiclesView/VehicleViewCell/VehicleListViewCell.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleViewCell/VehicleListViewCell.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="565.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="565.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="3.0" prefHeight="50.0" prefWidth="67.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-10.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -106,12 +106,12 @@
             <Label fx:id="nbOfSeatsLabel" alignment="CENTER" contentDisplay="TOP" layoutX="4.0" layoutY="29.0" prefHeight="17.0" prefWidth="32.0" text="4" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <Button onAction="clickedEditButton" layoutX="511.0" layoutY="11.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="37.0" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="5.0">
+      <Button layoutX="511.0" layoutY="11.0" mnemonicParsing="false" onAction="#clickedEditButton" prefHeight="18.0" prefWidth="37.0" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="5.0">
          <font>
             <Font size="8.0" />
          </font>
       </Button>
-      <Button onAction="clickedDeleteButton" layoutX="517.0" layoutY="29.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="37.0" style="-fx-background-color: E28243;" text="X" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="7.0">
+      <Button layoutX="517.0" layoutY="29.0" mnemonicParsing="false" onAction="#clickedDeleteButton" prefHeight="18.0" prefWidth="37.0" style="-fx-background-color: E28243;" text="X" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="7.0">
          <font>
             <Font size="8.0" />
          </font>
