--- a/src/Client/Views/AddCustomerAccountView/AddCustomerAccount.fxml
+++ b/src/Client/Views/AddCustomerAccountView/AddCustomerAccount.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddCustomerAccountView.AddCustomerAccountViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddCustomerAccountView.AddCustomerAccountViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: FFD3B7;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Create a customer account" textFill="#e28243" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -28,7 +28,7 @@
       <TextField fx:id="rePasswordField" layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
       <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0" />
       <Label fx:id="passwordCheckLabel" layoutX="320.0" layoutY="150.0" text="Passwords are not the same" AnchorPane.leftAnchor="320.0" />
-      <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
+      <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" 45 00 00 00 00" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="27.0" layoutY="239.0" text="Driving license number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="240.0" />
       <TextField fx:id="drivingLicenseField" layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
       <Label layoutX="27.0" layoutY="295.0" text="Enter CPR number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="300.0" />
