--- a/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
+++ b/src/Client/Views/AddEmployeesView/AddEmployeesView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddEmployeesView.AddEmployeesViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddEmployeesView.AddEmployeesViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" style="-fx-background-color: FFD3B7;" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Add Employee" textFill="#e28243" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -20,7 +20,7 @@
       <TextField fx:id="firstNameField" layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
       <TextField fx:id="lastNameField" layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
       <Label layoutX="25.0" layoutY="120.0" text="Date of birth:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
-      <DatePicker fx:id="dateOfBirthPicker" layoutX="27.0" layoutY="143.0" prefWidth="180.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
+      <DatePicker fx:id="dateOfBirthPicker" editable="false" layoutX="27.0" layoutY="143.0" prefWidth="180.0" showWeekNumbers="true" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
       <Label layoutX="27.0" layoutY="183.0" text="Enter an E-Mail:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="180.0" />
       <TextField fx:id="eMailField" layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" style="-fx-background-color: E5E5E5;" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="23.0" layoutY="320.0" text="Phone number:" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="320.0" />
@@ -33,7 +33,6 @@
       <Label alignment="CENTER" layoutX="154.0" layoutY="277.0" prefHeight="17.0" prefWidth="16.0" text="/" AnchorPane.leftAnchor="154.0" AnchorPane.topAnchor="277.0" />
       <Label layoutX="356.0" layoutY="128.0" text="Monthly salary:" />
       <TextField fx:id="salary" layoutX="356.0" layoutY="155.0" prefHeight="27.0" prefWidth="140.0" promptText="15000" style="-fx-background-color: E5E5E5;" />
-      <Label fx:id="addedLabel" layoutX="364.0" layoutY="317.0" text="The employee was sucessfully added" />
       <Label layoutX="19.0" layoutY="349.0" text="+" />
    </children>
 </AnchorPane>
