--- a/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
+++ b/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="244.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="244.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="Start Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -35,7 +35,7 @@
             <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="71.0" prefHeight="55.0" prefWidth="103.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -45,7 +45,7 @@
             <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="133.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="142.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="173.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="173.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="License Plate" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -55,7 +55,7 @@
             <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="28.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="55.0" prefWidth="93.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="332.0" prefHeight="55.0" prefWidth="93.0" AnchorPane.leftAnchor="332.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="End Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -73,7 +73,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="55.0" prefWidth="71.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="425.0" prefHeight="55.0" prefWidth="64.0" AnchorPane.leftAnchor="425.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -83,7 +83,7 @@
             <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="470.0" layoutY="-2.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="489.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button alignment="CENTER" layoutX="11.0" layoutY="25.0" mnemonicParsing="false" onAction="#onClickedEdit" prefHeight="24.0" prefWidth="36.0" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="18.0">
                <font>
