--- a/src/Client/Views/ListOfPersonalBookings/PersonalBookingCell/PersonalBookingViewCell.fxml
+++ b/src/Client/Views/ListOfPersonalBookings/PersonalBookingCell/PersonalBookingViewCell.fxml
@@ -5,24 +5,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="244.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="244.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="Start Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
+            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="30.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
                <font>
                   <Font size="10.0" />
                </font></Label>
-            <Label fx:id="startDateLabel1" alignment="CENTER" contentDisplay="TOP" layoutX="10.0" layoutY="38.0" prefHeight="15.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
          </children>
       </AnchorPane>
       <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -35,7 +30,7 @@
             <Label fx:id="bookingIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="3.0" layoutY="36.0" prefHeight="17.0" prefWidth="71.0" text="293346" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="71.0" prefHeight="55.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -45,7 +40,7 @@
             <Label fx:id="customerIdLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-2.0" layoutY="33.0" prefHeight="17.0" prefWidth="71.0" text="463329" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="133.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="142.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="164.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="164.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="License Plate" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -55,25 +50,21 @@
             <Label fx:id="licensePlateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-1.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="BA40 136" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="314.0" layoutY="10.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="308.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="337.0" prefHeight="73.0" prefWidth="93.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="337.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="-1.0" layoutY="11.0" prefHeight="13.0" prefWidth="95.0" text="End Time" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
-               <font>
-                  <Font size="10.0" />
-               </font></Label>
-            <Label fx:id="startDateLabel11" alignment="CENTER" contentDisplay="TOP" layoutX="14.0" layoutY="32.0" prefHeight="15.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="30.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="430.0" prefHeight="55.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="430.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label alignment="CENTER" layoutX="1.0" layoutY="11.0" prefHeight="13.0" prefWidth="71.0" text="Price" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
@@ -83,7 +74,7 @@
             <Label fx:id="priceLabel" alignment="CENTER" contentDisplay="TOP" layoutX="-4.0" layoutY="26.0" prefHeight="17.0" prefWidth="71.0" text="1450" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="470.0" layoutY="-2.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="501.0" prefHeight="55.0" prefWidth="79.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button alignment="CENTER" layoutX="8.0" layoutY="23.0" mnemonicParsing="false" onAction="#onClickedEditButton" prefHeight="24.0" prefWidth="36.0" style="-fx-background-color: E28243;" text="EDIT" AnchorPane.bottomAnchor="18.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="18.0">
                <font>
