--- a/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
+++ b/src/Client/Views/LogInForCustomerView/LogInForCustomerView.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInForCustomerView.LogInForCustomerViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInForCustomerView.LogInForCustomerViewController">
     <children>
-        <Button fx:id="logInButton" layoutX="220.0" layoutY="236.0" mnemonicParsing="false" onAction="#logIn" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: F4AF82;" text="LogIn" />
+        <Button fx:id="logInButton" layoutX="220.0" layoutY="236.0" mnemonicParsing="false" onAction="#logIn" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: F4AF82;" text="Log in" />
         <TextField fx:id="passwordField" alignment="CENTER" layoutX="220.0" layoutY="200.0" promptText="Password" />
         <Button layoutX="268.0" layoutY="359.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="27.0" prefWidth="66.0" style="-fx-background-color: FFD3B7;" text="Back" />
         <Label layoutX="232.0" layoutY="133.0" text="Log in as a customer">
@@ -21,7 +21,7 @@
         <TextField fx:id="emailField" alignment="CENTER" layoutX="220.0" layoutY="165.0" promptText="E-Mail" />
         <Label layoutX="187.0" layoutY="301.0" text="Don't you have an account ? Sign up now !" />
         <Button layoutX="220.0" layoutY="325.0" mnemonicParsing="false" onAction="#signUp" prefHeight="27.0" prefWidth="161.0" style="-fx-background-color: F4AF82;" text="SignUp" />
-      <Label fx:id="incorrectPasswordLabel" layoutX="206.0" layoutY="249.0" text="Your email or password is incorrect" visible="false" />
+      <Label fx:id="incorrectPasswordLabel" layoutX="206.0" layoutY="270.0" text="Your email or password is incorrect" visible="false" />
       <ImageView fitHeight="127.0" fitWidth="200.0" layoutX="206.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="206.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@/GUI/Logo.png" />
